goworld-deploy-svc-ingress.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: goworld
  labels:
    app: goworld
spec:
  replicas: 2
  selector:
    matchLabels:
      app: goworld
      task: goworld
  template:
    metadata:
      labels:
        app: goworld
        task: goworld
    spec:
      containers:
      - name: goworld
        image: pathcl/goworld:0.0.5
        resources:
          requests:
            memory: "1024Mi"
        ports:
        - containerPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    traefik.frontend.rule.type: PathPrefixStrip
  generation: 6
  name: goworld
  namespace: default
spec:
  rules:
  - host: sanmartin.io
    http:
      paths:
      - backend:
          serviceName: goworld
          servicePort: http
        path: /goworld
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: goworld
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: goworld
    task: goworld
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
